Fix: Location text overflow

--- a/src/new-block/edit.scss
+++ b/src/new-block/edit.scss
@@ -10,6 +10,10 @@ $color-blue: #3858E9;
     text-overflow: ellipsis;
 }
 
+.gravatar-block-text-truncate-1-line {
+    @include text-truncate( 1 );
+}
+
 .gravatar-block-text-truncate-2-lines {
     @include text-truncate( 2 );
 }
